--- a/_posts/2019-07-11-the-us-narrative-today.html
+++ b/_posts/2019-07-11-the-us-narrative-today.html
@@ -2714,107 +2714,107 @@ stories:
   domain: http://www.dglobe.com/
   link: https://www.dglobe.com/sports/3830511-Amateur-baseball-playoffs-are-around-the-corner
 images:
-- name: amusement-park-amusement-park-2-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-circuit-3.jpg
-- name: white-house-lawn-white-house-window-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-yellow-paper.jpg
-- name: containership-containership-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-cinnamon-rolls.jpg
-- name: aws-s3-methuselah-methuselah-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-methuselah-methuselah-still.jpg
-- name: border-crossing-bordercrossing-alberto-giacometti.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-alberto-giacometti.png
-- name: meadowbutterfly-meadow-butterfly-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-dali-three.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-jap-wav-pr.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-jap-wav-pr.JPG
-- name: stories-new-27-93-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-27-93-800-500-0-max-0--5--5.jpg
-- name: curtain-curtain-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-blue-electricity.jpg
-- name: udnie-IMG_7559.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7559.jpg
-- name: oldhousecars-house-old-cars-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-post-modern.jpg
-- name: supreme-court-supremecourt-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-purple-storm.jpg
-- name: carry-load-carryload-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-pablo-blue.jpg
-- name: old-barn-old-barn-1500-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-alberto-giacometti.jpg
-- name: oldcabin-store-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-blue-granite.jpg
-- name: nazi-invasion-IMG_4753.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_4753.jpg
-- name: power-lines-power-lines-empty-space-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-crunch-paper.jpg
+- name: windowmountain-window-mountain-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-umberto-bocc.jpg
+- name: old-school-house-old-schoolhouse-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-purple-pond.jpg
+- name: oldcabin-oldcabin-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-deep-connections.jpg
+- name: border-fence-border-fence-on-hill-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-crabapple.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-dark-rain.jpg
+- name: statue-of-liberty-front-view-statueofliberty-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-copper-circuit-2.jpg
+- name: border-crossing-bordercrossing-ww2-dresden.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-ww2-dresden.png
+- name: beach-rocks-beach-rocks-currents-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-purp-paper.jpg
+- name: old-church-oldchurch-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-green-zuma.jpg
+- name: dc-statue-dcstatue-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-plentiful.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-deep-connections.jpg
+- name: white-house-whitehouse-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-purple-storm.jpg
+- name: ellis-island-ellis-island-room-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-dali-two.jpg
+- name: status-berlin-status-berlin-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dali-two.jpg
+- name: store-on-corner-store-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-yellow-collage.jpg
+- name: oldtrain-oldtrain-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-far-away.jpg
+- name: server-cloud-server-racks-door-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-kand-two.jpg
 - name: old-door-lock-old-door-lock-2-mucha-mult.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-mucha-mult.jpg
-- name: white-house-lawn-white-house-window-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-mucha-mult.jpg
-- name: razorwire-DSC-0080-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-green-zuma.jpg
-- name: statue-of-liberty-front-view-statueofliberty-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-colorful-dream.jpg
-- name: statue-of-liberty-front-view-statueofliberty-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-far-away.jpg
-- name: beach-clouds-lifeguard-beachclouds-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-colorful-blocks.jpg
-- name: old-door-lock-old-door-lock-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dry-skin.jpg
-- name: razorcliff-razorcliff-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dark-soul.jpg
-- name: white-house-lawn-white-house-window-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-hot-spicy.jpg
-- name: downtown-trucksilo-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-dark-rain.jpg
-- name: art-museum-art-museum-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-matrix.jpg
-- name: old-school-house-old-schoolhouse-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-kand-two.jpg
-- name: oldhouse-granaryfield-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-blue-electricity.jpg
-- name: gypsymosaic-gypsy-eyes-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-alberto-giacometti.jpg
-- name: fence-fence-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-oily-mcoilface.jpg
-- name: rain-princess-IMG_6945.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_6945.jpg
-- name: gypsy-wagon-gypsywagon-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-alien-goggles.jpg
-- name: capital-battle-capitolbattle-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-diego-rivera1.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-yellow-paper.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-purple-storm.jpg
-- name: death-valley-death-valley-national-park-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-oily-mcoilface.jpg
-- name: carry-load-carryload-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-clean-view.jpg
-- name: old-gas-pumps-oldgaspumps-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-blue-granite.jpg
-- name: subway-subway-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-space-pizza.jpg
-- name: cargo-ship-cargo-ship-on-sea-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dali-two.jpg
-- name: white-house-lawn-white-house-window-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dark-soul.jpg
-- name: trucksilo-trucksilo-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-sand-paper.jpg
-- name: abandonedbuildings_light_dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_light_dali.jpg
-- name: legal-statue-legalstatue-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-clean-view.jpg
-- name: status-berlin-status-berlin-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-mucha-mult.jpg
-- name: aws-s3-stories-new-beach-rocks-currents-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-beach-rocks-currents-kand-two.jpg
-- name: white-house-whitehouse-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dark-dali.jpg
-- name: art-museum-art-museum-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-crafty-painting.jpg
-- name: mediterranean-mediterranean-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-constitution.jpg
+- name: stories-new-75-125-800-500-0-max-0-1-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-75-125-800-500-0-max-0-1-1.jpg
+- name: blossombar-crafty-painting-file-00-00-50-58.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-58.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-dali-three.jpg
+- name: old-school-house-old-schoolhouse-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-blue-brush.jpg
+- name: white-house-whitehouse-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dali-three.jpg
+- name: old-cabin-oldcabin-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-gan-vogh.jpg
+- name: oldroad-old-road-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-alien-goggles.jpg
+- name: oldroad-old-road-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-smooth-ride.jpg
+- name: gears-4882162452-fa3126b38d-b-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dark-rain.jpg
+- name: art-museum-art-museum-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-creativity.jpg
+- name: stories-amusement-park-2-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-amusement-park-2-light-dali.jpg
+- name: statue-of-liberty-front-view-statueofliberty-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dry-skin.jpg
+- name: supreme-court-supremecourt-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-clean-view.jpg
+- name: old-granary-field-granaryfield-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-blue-electricity.jpg
+- name: store-on-corner-store-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-crabapple.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-internet-numbers.jpg
+- name: gears-4882162452-fa3126b38d-b-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-oily-mcoilface.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit-2.jpg
+- name: old-barn-old-barn-1500-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-smoking-cigarette.jpg
+- name: gears-4882162452-fa3126b38d-b-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-purple-storm.jpg
+- name: gears-4882162452-fa3126b38d-b-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-rainbow-festival.jpg
+- name: downtown-trucksilo-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-aqua.jpg
+- name: adam-smith-adam-smith-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-copper-circuit-2.jpg
+- name: window-window-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-really-hot.jpg
+- name: white-house-lawn-white-house-lawn-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-green-zuma.jpg
+- name: eduardo-eduardo-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-alien-goggles.jpg
+- name: border-fence-border-fence-on-hill-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-diego-rivera1.jpg
+- name: gears-4882162452-fa3126b38d-b.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b.jpg
+- name: oldcabin-store-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-kandinsky-bv.jpg
+- name: ellis-island-ellisisland-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-atari-missle.jpg
+- name: containership-containership-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-deep-connections.jpg
+- name: razorwire-DSC-0080-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-nazi-poster.jpg
+- name: rain-princess-IMG_8312.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_8312.jpg
 ---
 Celebrate The Great Girl Groups.&nbsp;Steeplechase Charleston Tickets Now On Sale For November Race.&nbsp;All Star Game Baseball.&nbsp;McNary Proves To Be No Match For West Albany.&nbsp;Missing Man's Body Pulled From River Near Livingston.&nbsp;Stocks Rise On Wall Street, Sending Dow Briefly Over 27,000.&nbsp;Hilbers Awarded Contract For Casa De Esperanza Project.&nbsp;What Is The Climate Change Story We Tell Our Children?.&nbsp;
